--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["vocabulary", "microsoft-graph", "express"],
+  "keywords": [
+    "vocabulary",
+    "microsoft-graph",
+    "express"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@azure/identity": "^4.13.0",
     "@microsoft/microsoft-graph-client": "^3.0.7",
+    "@tigrisdata/storage": "^2.12.2",
+    "dotenv": "^17.2.4",
     "express": "^4.18.2",
     "isomorphic-fetch": "^3.0.0"
   },
